[metadata]
name = networking-cilium
summary = OpenStack/Neutron integration for Cilium networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_cilium

[entry_points]
console_scripts =
    cilium-dhcp-agent = networking_cilium.agent.dhcp_agent:main
    neutron-cilium-agent = networking_cilium.cmd.agent:main
neutron.ml2.mechanism_drivers =
    cilium = networking_cilium.plugins.ml2.mech_cilium:CiliumMechanismDriver

[compile_catalog]
directory = networking_cilium/locale
domain = networking_cilium

[update_catalog]
domain = networking_cilium
output_dir = networking_cilium/locale
input_file = networking_cilium/locale/networking_cilium.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_cilium/locale/networking_cilium.pot
